# ot-harjoitustyo

./: README.md  Tuntikirjanpito  Tuntikirjanpito.md
Sovellus/: .coveragerc  game.py  pyproject.toml
Sovellus/all/: game.py  game_board.py  gameloop.py  main.py  renderer.py
Sovellus/poetry-testi/src/: index.py
Sovellus/src/: gameloop.py  main.py  renderer.py
Sovellus/src/all/: game.py
Tic Tac Toe/Sovellus/: game.py  pyproject.toml  tasks.py
Tic Tac Toe/Sovellus/dokumentaatio/: changelog.md
Tic Tac Toe/Sovellus/src/tests/: main_test.py
TicTacToe/: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
TicTacToe/dokumentaatio/: Testausdokumentti.md  Tuntikirjanpito.md  arkkitehtuuri.md  changelog.md  käyttöohje.md  vaatimusmaarittely.md
TicTacToe/src/: event_pueue.py  gameloop.py  main.py  menu_loop.py  menu_main.py  menu_renderer.py  renderer.py  run.py  start_menu.py  values.py
TicTacToe/src/tests/: main_test.py
dokumentaatio/: changelog.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .gitignore  pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajannettu_monopoli.md  machine.md  matkakortti.md  monopoli.md
