[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["algayalm <mudar.algayal@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_testi"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^2.0.0"
tasks = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
