[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["algayalm <mudar.algayal@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_testi"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
tasks = "^2.8.0"
pygame = "^2.3.0"
coverage = "^7.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
